# application-framework

./: NOTICE  README.md  Rakefile
.devcontainer/: Dockerfile  (+1 more)
VAF/: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
VAF/src/vaf/: __init__.py
VAF/src/vaf/core/cli_subcommands/: make_subcmd.py  model_subcmd.py  platform_subcmd.py  project_init_subcmd.py  project_subcmd.py  undo_subcmd.py  workspace_subcmd.py
VAF/src/vaf/core/common/: click_extension.py  click_help.py  constants.py  exceptions.py  utils.py
VAF/src/vaf/core/objects/: make_cmd.py  model_cmd.py  platform_cmd.py  project_cmd.py  project_init_cmd.py  workspace_cmd.py
VAF/src/vaf/core/state_manager/: __init__.py  data_model.py  factory.py  state_manager.py  tracker.py
VAF/src/vaf/core/state_manager/data_handlers/: __init__.py  dir_handlers.py  file_handlers.py  symlink_handlers.py
VAF/src/vaf/core/state_manager/protocols/: __init__.py  protocols.py
VAF/src/vaf/entry_points/default/: entry_point.py
VAF/src/vaf/vafgeneration/: __init__.py  generation.py  vaf_application_communication.py  vaf_application_module.py  vaf_cac_support.py  vaf_cmake_common.py  vaf_conan.py  vaf_controller.py  vaf_core_library.py  vaf_generate_application_module.py  vaf_generate_common.py  vaf_generate_project.py  vaf_interface.py  vaf_persistency.py  vaf_protobuf_serdes.py  vaf_silkit.py  vaf_std_data_types.py
VAF/src/vaf/vafgeneration/templates/common/: cmake_copyright.jinja  cmake_interface_library.jinja  cmake_library.jinja  copyright.jinja  cpp_file_base.jinja  h_file_base.jinja
VAF/src/vaf/vafifextojson/: __init__.py  converter.py  ifex_helper.py
VAF/src/vaf/vafmodel/: vafmodel.py
VAF/src/vaf/vafpy/: __init__.py  core.py  datatypes.py  elements.py  executable.py  factory.py  model_runtime.py  runtime.py  task.py  validator.py
VAF/src/vaf/vafvssimport/: vss_import.py
VAF/src/vaf/vafvssimport/vss/: vss_model.py  vss_types.py
VAF/tests/: Makefile  conftest.py
VAF/tests/component/cli/: test_cli_make.py  test_cli_model.py  test_cli_platform.py  test_cli_project.py  test_cli_undo_redo.py  test_cli_workspace.py  test_main.py
VAF/tests/component/scenario/: test_cmake_merge_conflicts.py  test_import_appmodule_symlink_tracking.py  test_vaf_643.py
VAF/tests/component/test_data/: grop.py
VAF/tests/component/test_data/cmake_conflicts/: CMakeLists.txt  my_project.py  my_project1.py
VAF/tests/component/test_data/vaf_643/: app-modules-CMakeLists.txt  daimyo.py  daimyo1.py  goal-app-modules-CMakeLists.txt  goal_nobunaga.cpp  goal_nobunaga_integration.h  nobunaga.cpp  nobunaga.h  nobunaga.py  nobunaga_initial.py  tadakatsu.py  user-controller-CMakeLists.txt
VAF/tests/component/test_data/vaf_740/: interfaces.py  interfaces_1.py  random_config_1.py  random_config_2.py  random_config_3.py  random_model_1.py  random_model_2.py  random_model_3.py
VAF/tests/unit/core/: test_make_cmd.py  test_model_cmd.py  test_project_cmd.py
VAF/tests/unit/core/test_state_manager/: test_comprehensive_state_manager.py  test_data_model.py  test_factory.py  test_integration_workflows.py  test_state_manager.py  test_symlink_handlers.py  test_symlink_handlers_relative.py  test_tracker_relative_symlinks.py
VAF/tests/unit/vafgeneration/: test_application_communication.py  test_application_module.py  test_cmake_common.py  test_controller.py  test_core_library.py  test_generation.py  test_merge_after_regeneration.py  test_persistency.py  test_protobuf.py  test_protobuf_optional.py  test_silkit.py  test_vafinterface.py  test_vafproject.py  test_vss.py
VAF/tests/unit/vafgeneration/application_communication/: CMakeLists.txt  my_service_module.cpp  my_service_module.h
VAF/tests/unit/vafgeneration/application_module/: app.cpp  app.h  app_cmake.txt  apps_cmake.txt  base.cpp  base.h  base_cmake.txt  main.cpp  test_base.cpp  test_base.h  test_cmake.txt  tests.cpp
VAF/tests/unit/vafgeneration/cmake_common/: cmake.txt  exe_cmake.txt  libs_cmake_append.txt  libs_cmake_append2.txt
VAF/tests/unit/vafgeneration/controller/: CMakeLists.txt  executable_controller.cpp  executable_controller.h  main.cpp
VAF/tests/unit/vafgeneration/input_model_examples/: silkit.json
VAF/tests/unit/vafgeneration/interface/: persistency_interface.h  test1_consumer_expected.h  test1_consumer_mock_expected.h  test1_provider_expected.h  test1_provider_mock_expected.h
VAF/tests/unit/vafgeneration/merge_strategy/: model_base.json
VAF/tests/unit/vafgeneration/protobuf_serdes/: CMakeLists.txt
VAF/tests/unit/vafgeneration/silkit/: MyExecutable.vCDL  consumer_module_h.jinja  my_consumer_module.cpp  my_consumer_module.h  my_provider_module.cpp  my_provider_module.h
VAF/tests/unit/vafifextojson/: __init__.py  test_basic.py
VAF/tests/unit/vafifextojson/test_data/: base_interface.yaml  base_no_layering.yaml  base_service_interface.yaml  base_types.yaml  complex_struct_members.yaml  conflict_array.yaml  conflict_interface1.yaml  conflict_interface2.yaml  conflict_map.yaml  conflict_struct_enum_1.yaml  conflict_struct_enum_enum.yaml  conflict_struct_enum_struct.yaml  deeply_nested.yaml  empty_ifex.yaml  enum_conflict1.yaml  enum_conflict2.yaml  enum_explicit_values.yaml  event_multi_params.yaml  extended_interface.yaml  extended_service_interface.yaml  fully_qualified_refs.yaml  identical_batch2.yaml  identical_interface1.yaml  identical_interface2.yaml  identical_interface_base.yaml  identical_struct1.yaml  including_no_layering.yaml  interface_with_descriptions.yaml  invalid_syntax.yaml  method_with_errors.yaml  mixed_namespace_content.yaml  nested_alternative.yaml  nested_base.yaml  nested_derived.yaml  nested_second_top_level.yaml  nested_top_level.yaml  no_namespaces.yaml  other_interface.yaml  same_name_diff_ns1.yaml  same_name_diff_ns2.yaml  (+13 more)
VAF/tests/unit/vafmodel/: test_example.py
VAF/tests/unit/vafpy/: test_cac.py  test_example.py  test_optional_struct_elements.py
VAF/tests/unit/vafvssimport/: test_export_arrays.py  test_export_enum.py  test_export_min_max.py  test_export_struct.py  test_vss_import.py
VAF/tests/utils/: test_helpers.py
(+202 files in other folders)
