[project]
name = "vaf"
version = "0.7.0"
description = "Commandline tool for the Vehicle Application Framework (VAF)"
readme = "README.md"
keywords = ["python", "module"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

authors = [{ name = "author", email = "" }]
license = {text = "Apache-2.0"}

dependencies = [
    "click==8.2.1",
    "conan==2.20",
    "copier==9.9.1",
    "jinja2==3.1.6",
    "pydantic==2.11.7",
    "lxml==6.0.0",
    "networkx==3.4.2",
    "click-prompt==0.6.1",
    "prompt-toolkit==3.0.51",
    "ifex @ git+https://github.com/COVESA/ifex.git@15f0595",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://projects.eclipse.org/projects/automotive.autoapiframework"
Repository = "https://gitlab.eclipse.org/eclipse/autoapiframework"
Documentation = "../Documentation/README.md"
Changelog = "<source url>"

[project.scripts]
vaf = "vaf.entry_points.default.entry_point:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

#########
# TOOLS #
#########

## UV
[tool.uv]
extra-index-url = ["pypi.org"]
allow-insecure-host = ["pypi.org", "pypi.python.org", "files.pythonhosted.org"]
default-groups = ["dev"]

[tool.pdm.version]
source = "scm"
fallback_version = "0.1.0"

[dependency-groups]
dev = [
    # lint
    "ruff==0.15.1",
    "mypy==1.16.1",
    "pip==25.1.1",
    "pylint==3.3.7",
    # test
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-dependency",
    # "pes-pytest-utils>=0.1.0",
    # doc and spec
    "packaging==25.0",
]

[tool.ruff]
extend = "ruff.toml"
line-length = 120

[tool.pylint]
## pylint linter settings
## see `pylint --generate-toml-config`
## justify single line via:  # pylint: disable=<rule>
extension-pkg-allow-list = "lxml"
disable = [
    "C0103", #Buggy line disabling mechanism
]

[tool.pylint.main]
ignore-paths = [
    ".git",
    "__pypackages__",
    "tests/_temp",
    "src/vaf/core/templates",
    "src/vaf/core/templates",
    # "tests"  # enable/disable linting within tests directory
]
load-plugins = ["pylint.extensions.docparams"]
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-yields-doc = "no"
default-docstring-type = "google"

[tool.pylint.format]
max-line-length = 120

[tool.black]
## black code formatter settings
line-length = 120

## ISORT
[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
## mypy static typechecker settings
## see https://mypy.readthedocs.io/en/stable/config_file.html
## justify single line via:
##     # type: ignore[<error-code>]
##     # type: ignore
files = [
    "src/",
    "tests/", # enable/disable linting within tests directory
]
mypy_path = "src"
exclude = [
    "tests/_temp",                # Exclude tests/_temp from mypy. Some tests will install venvs there.
    "src/vaf/core/templates",
    "src/vaf/core/templates",
    "tests/unit/core/test_data",
    "tests/unit/vafpy/test_data",
    "tests/component/test_data",
]
show_error_codes = true
strict = true # https://mypy.readthedocs.io/en/stable/config_file.html#confval-strict
ignore_missing_imports = true

#[[tool.mypy.overrides]]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_temp/*"]
addopts = "--verbose --cov-report=term"
# markers for testing vafpy
markers = [
    "vafpy_xy_data_el: test XyDataElement",
    "vafpy_xy_operations: test XyOperations",
    "slow: mark test as slow"
]

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true
